--- a/forecaster/pyproject.toml
+++ b/forecaster/pyproject.toml
@@ -19,7 +19,12 @@ dependencies = [
     "matplotlib (>=3.10.1,<4.0.0)",
     "statsmodels (>=0.14.4,<0.15.0)",
     "shap (>=0.47.2,<0.48.0)",
-    "seaborn (>=0.13.2,<0.14.0)"
+    "seaborn (>=0.13.2,<0.14.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "celery (>=5.5.1,<6.0.0)",
+    "redis (>=5.2.1,<6.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 
