--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,7 @@ services:
       - REDIS_PORT=6379
     depends_on:
       - redis
+    volumes:
+      - ./forecaster:/app
+      - ./forecaster/log:/var/log
     restart: always
