--- a/project/package.json
+++ b/project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "forecasting-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,19 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "chart.js": "^4.4.1",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
