--- a/forecaster/Dockerfile
+++ b/forecaster/Dockerfile
@@ -1,30 +1,43 @@
-FROM python:3.10-slim-buster
+# Stage 1: Dependency installation
+FROM python:3.10-slim-buster AS builder
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV PATH="/root/.local/bin:$PATH"
+
+# Set the working directory
+WORKDIR /app
+
+# Copy only dependency files
+COPY pyproject.toml poetry.lock /app/
+
+# Install dependencies
+RUN pip install poetry
+RUN poetry install --without dev
+
+# Stage 2: Final image
+FROM python:3.10-slim-buster
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONPATH=/app
 
 # Set the working directory
 WORKDIR /app
 
-# Install system dependencies and Poetry in a single layer
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    libpq-dev \
     curl \
     supervisor \
-    && curl -sSL https://install.python-poetry.org | python3 - \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/*
 
-# Copy only necessary files for dependency installation
-COPY pyproject.toml poetry.lock /app/
+# Copy dependencies from the builder stage
+COPY --from=builder /root/.local /root/.local
 
-# Install only production dependencies
-RUN poetry install --no-root --no-cache
-
-# Copy the rest of the application code
+# Copy the application code
 COPY . /app/
 
 # Copy Supervisor configuration
