--- a/forecaster/pyproject.toml
+++ b/forecaster/pyproject.toml
@@ -15,16 +15,14 @@ dependencies = [
     "lightgbm (>=4.6.0,<5.0.0)",
     "xgboost (>=3.0.0,<4.0.0)",
     "catboost (>=1.2.8,<2.0.0)",
-    "prophet (>=1.1.6,<2.0.0)",
     "matplotlib (>=3.10.1,<4.0.0)",
-    "statsmodels (>=0.14.4,<0.15.0)",
-    "shap (>=0.47.2,<0.48.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
     "celery (>=5.5.1,<6.0.0)",
     "redis (>=5.2.1,<6.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "duckdb (>=1.2.2,<2.0.0)"
 ]
 
 
