--- a/forecaster/supervisord.conf
+++ b/forecaster/supervisord.conf
@@ -1,18 +1,25 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+logfile_maxbytes=5MB
 
 [program:fastapi]
-command=poetry run uvicorn api.main:app --host 0.0.0.0 --port 8000
+command=uvicorn api.main:app --host 0.0.0.0 --port 8000
 directory=/app
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/fastapi.err.log
+stderr_logfile_maxbytes=5MB
 stdout_logfile=/var/log/fastapi.out.log
+stdout_logfile_maxbytes=5MB
+
 
 [program:celery]
-command=poetry run celery -A api.main.celery worker --loglevel=info
+command=celery -A api.tasks.celery worker --loglevel=info
 directory=/app
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/celery.err.log
+stderr_logfile_maxbytes=5MB
 stdout_logfile=/var/log/celery.out.log
+stdout_logfile_maxbytes=5MB
