--- a/forecaster/Dockerfile
+++ b/forecaster/Dockerfile
@@ -1,41 +1,25 @@
 # Stage 1: Dependency installation
-FROM python:3.10-slim-buster AS builder
+FROM python:3.12-slim AS builder
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV PATH="/root/.local/bin:$PATH"
+ENV PYTHONPATH="/app"
+
+# Required packages
+RUN apt-get update && apt-get install -y \
+    libgomp1 \
+    supervisor \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory
 WORKDIR /app
 
 # Copy only dependency files
-COPY pyproject.toml poetry.lock /app/
+COPY requirements.txt /app/
 
-# Install dependencies
-RUN pip install poetry
-RUN poetry install --without dev
-
-# Stage 2: Final image
-FROM python:3.10-slim-buster
-
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-ENV PATH="/app/.venv/bin:$PATH"
-ENV PYTHONPATH=/app
-
-# Set the working directory
-WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    supervisor \
-    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/*
-
-# Copy dependencies from the builder stage
-COPY --from=builder /root/.local /root/.local
+RUN pip install -r requirements.txt
 
 # Copy the application code
 COPY . /app/
