--- a/forecaster/pyproject.toml
+++ b/forecaster/pyproject.toml
@@ -18,11 +18,11 @@ dependencies = [
     "matplotlib (>=3.10.1,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn (>=0.34.2,<0.35.0)",
     "celery (>=5.5.1,<6.0.0)",
     "redis (>=5.2.1,<6.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "duckdb (>=1.2.2,<2.0.0)"
+    "duckdb (>=1.2.2,<2.0.0)",
+    "uvicorn (>=0.34.2,<0.35.0)"
 ]
 
 
@@ -37,3 +37,8 @@ description = ""
 authors = ["xcurvnubaim"]
 readme = "README.md"
 packages = [{ include = "kp_forecaster" }]
+
+[tool.uv.workspace]
+members = [
+    "test",
+]
