--- a/forecaster/pyproject.toml
+++ b/forecaster/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "redis (>=5.2.1,<6.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "duckdb (>=1.2.2,<2.0.0)",
-    "uvicorn (>=0.34.2,<0.35.0)"
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
+    "xlrd (>=2.0.1,<3.0.0)"
 ]
 
 
