--- a/forecaster/requirements.txt
+++ b/forecaster/requirements.txt
@@ -15,10 +15,12 @@ colorama==0.4.6 ; python_version >= "3.10" and platform_system == "Windows"
 contourpy==1.3.2 ; python_version >= "3.10"
 cycler==0.12.1 ; python_version >= "3.10"
 duckdb==1.2.2 ; python_version >= "3.10"
+et-xmlfile==2.0.0 ; python_version >= "3.10"
 exceptiongroup==1.2.2 ; python_version == "3.10"
 fastapi==0.115.12 ; python_version >= "3.10"
 fonttools==4.57.0 ; python_version >= "3.10"
 graphviz==0.20.3 ; python_version >= "3.10"
+h11==0.16.0 ; python_version >= "3.10"
 idna==3.10 ; python_version >= "3.10"
 joblib==1.4.2 ; python_version >= "3.10"
 kiwisolver==1.4.8 ; python_version >= "3.10"
@@ -28,6 +30,7 @@ matplotlib==3.10.1 ; python_version >= "3.10"
 narwhals==1.35.0 ; python_version >= "3.10"
 numpy==2.2.5 ; python_version >= "3.10"
 nvidia-nccl-cu12==2.26.2.post1 ; platform_system == "Linux" and platform_machine != "aarch64" and python_version >= "3.10"
+openpyxl==3.1.5 ; python_version >= "3.10"
 packaging==25.0 ; python_version >= "3.10"
 pandas==2.2.3 ; python_version >= "3.10"
 pillow==11.2.1 ; python_version >= "3.10"
@@ -52,7 +55,8 @@ typing-extensions==4.13.2 ; python_version >= "3.10"
 typing-inspection==0.4.0 ; python_version >= "3.10"
 tzdata==2025.2 ; python_version >= "3.10"
 urllib3==2.4.0 ; python_version >= "3.10"
+uvicorn==0.34.2 ; python_version >= "3.10"
 vine==5.1.0 ; python_version >= "3.10"
 wcwidth==0.2.13 ; python_version >= "3.10"
 xgboost==3.0.0 ; python_version >= "3.10"
-uvicorn==0.34.2 ; python_version >= "3.10"
+xlrd==2.0.1 ; python_version >= "3.10"
